package com.vibook.backend.entity;

public enum AdminActivityAction {
    APPROVE_BUSINESS_PROFILE,
    REJECT_BUSINESS_PROFILE,
    BULK_APPROVE_BUSINESS_PROFILES,
    BULK_REJECT_BUSINESS_PROFILES,
    UPDATE_BUSINESS_NOTES,
    CREATE_CATEGORY,
    UPDATE_CATEGORY,
    DELETE_CATEGORY,
    UPDATE_GOVERNORATE_STATUS,
    UPDATE_USER_ROLES,
    ENABLE_USER,
    DISABLE_USER
}
