package com.vibook.backend.entity;

public enum ModerationReportType {
    BOOKING,
    EVENT,
    USER,
    RATING,
    BUSINESS_PROFILE,
    OTHER
}
