package com.vibook.backend.entity;

public enum PaymentStatus {
    CREATED,
    APPROVED,
    CAPTURED,
    FAILED,
    CANCELLED
}
